force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__account__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>conversations</relationshipLabel>
    <relationshipName>conversations</relationshipName>
    <type>Lookup</type>
</CustomField>