force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__All_Mobile__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__All_Mobile__c</fullName>
    <label>All Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>