force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__case__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>conversations</relationshipLabel>
    <relationshipName>conversations</relationshipName>
    <type>Lookup</type>
</CustomField>