force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Contact__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>