force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Conversation_Depth__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Conversation_Depth__c</fullName>
    <formula>smagicinteract__Incoming_Message_Count__c + smagicinteract__Outgoing_Message_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversation Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>