force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Conversation_Initiator__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Conversation_Initiator__c</fullName>
    <label>Conversation Initiator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated by Agent</fullName>
            </value>
            <value>
                <fullName>Initiated by Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>