force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Converse_App__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converse App</label>
    <referenceTo>smagicinteract__Converse_App__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>