force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Converse_App_Action__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converse App Action</label>
    <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>