force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Inbound_Number__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Inbound_Number__c</fullName>
    <label>Inbound Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>