force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Incoming_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Incoming_Message_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Incoming Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>