force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Is_Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Case_Closed__c</fullName>
    <formula>smagicinteract__case__r.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Closed</label>
    <type>Checkbox</type>
</CustomField>