force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Is_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Lead_Converted__c</fullName>
    <formula>smagicinteract__Lead__r.IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lead Converted</label>
    <type>Checkbox</type>
</CustomField>