force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__isUnread__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__isUnread__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUnread</label>
    <type>Checkbox</type>
</CustomField>