force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Last_Incoming_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Incoming_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Incoming SMS</label>
    <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>