force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Last_Incoming_Negative_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Incoming_Negative_Sentiment__c</fullName>
    <label>Last Incoming Negative Sentiment</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>