force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Last_Incoming_SMS_Record__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Incoming_SMS_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Incoming SMS Record</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>