force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Last_Message_Direction__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Message_Direction__c</fullName>
    <label>Last Message Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUT</fullName>
                <default>true</default>
                <label>OUT</label>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>