force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Last_Message_Text__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Message_Text__c</fullName>
    <label>Last Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>