force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Last_Message_Time__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Message_Time__c</fullName>
    <label>Last Message Time</label>
    <type>DateTime</type>
</CustomField>