force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Last_Outgoing_SMS_Record__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Outgoing_SMS_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Outgoing SMS Record</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>Conversations (Last Outgoing SMS Record)</relationshipLabel>
    <relationshipName>Conversations1</relationshipName>
    <type>Lookup</type>
</CustomField>