force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>