force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Mode__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>