force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Object__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>