force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__opportunity__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>conversations</relationshipLabel>
    <relationshipName>conversations</relationshipName>
    <type>Lookup</type>
</CustomField>