force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opportunity_Stage__c</fullName>
    <formula>IF(smagicinteract__opportunity__c == null, &apos;&apos;, IF( NOT(smagicinteract__opportunity__r.IsClosed) , &apos;Open&apos;, (IF( smagicinteract__opportunity__r.IsWon , &apos;Won&apos;, &apos;Lost&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>