force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Priority_Score__c</fullName>
    <formula>smagicinteract__Response_Score__c +  smagicinteract__Sentiment_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>