force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Purpose__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Purpose__c</fullName>
    <label>Purpose</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>