force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Response_Required__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Response_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Required</label>
    <type>Checkbox</type>
</CustomField>