force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Response_Score__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Response_Score__c</fullName>
    <formula>IF( smagicinteract__Response_Required__c , 

   IF( TEXT( smagicinteract__Last_Message_Direction__c ) == &apos;OUT&apos;, 
       IF( ( Now() -  smagicinteract__Last_Message_Time__c)  * 24  &gt;= 2.0  , 50, 0), 
       IF( ( Now() -  smagicinteract__Last_Message_Time__c)  * 24  &gt;= 0.5  , 50, 0)
   )       

, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>