force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Routing_Detail__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Routing_Detail__c</fullName>
    <description>This field contains details of the applicable routing rule and all its related information in JSON format.</description>
    <label>Routing Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>