force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Sender__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>