force-app/main/default/objects/smagicinteract__Conversation__c/fields/smagicinteract__Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sentiment_Score__c</fullName>
    <formula>MAX(  smagicinteract__Last_Incoming_Negative_Sentiment__c , smagicinteract__Last_Outgoing_Negative_Sentiment__c ) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sentiment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>