force-app/main/default/objects/smagicinteract__Conversation__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__State__c</columns>
    <columns>smagicinteract__Contact__c</columns>
    <columns>smagicinteract__Converse_App__c</columns>
    <columns>smagicinteract__Lead__c</columns>
    <columns>smagicinteract__New_Count__c</columns>
    <columns>smagicinteract__Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>